----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-08-08 Michal Čihař  <michal@cihar.com>
	* calendar.php: Include correct stylesheet (bug #1005421).

2004-08-07 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/turkish update, thanks to Bora Alioglu
    * lang/slovak: Updated, thanks to Lubos Klokner (erkac)
    * lang/polish: Updated, thanks to Jakub Wilk (ubanus).
    * lang/dutch: bug 1000683, backslash typo
    * libraries/mysql_charsets.lib.php: bug 1005120, duplicated line

2004-08-06 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_operations.php: bug 1004523, now display table options
      according to the possibilities of the table types

2004-08-06 Michal Čihař  <michal@cihar.com>
    * tbl_change.php: Do not free result, we need it later.
    * tbl_relation.php: Some functions do not take parameters (bug #1000021).
    
2004-08-05 Marc Delisle  <lem9@users.sourceforge.net>
    (Patches from Michael Keck)
    * index.php: names and ids for framesets in the noscript section
    * updated themes screenshots
    * left.php: bug 998698, db dropdown refresh
    (me)
    * lang/galician: Updated, thanks to Xosé Calvo.
    * lang/swedish: Updated, thanks to Björn T. Hallberg (bth).
    * lang/japanese: updated, thanks to Tadashi Jokagi (elf2000) 

2004-08-03 Marc Delisle  <lem9@users.sourceforge.net>
    (Patches from Michael Keck)
    * libraries/display_tbl.lib.php: bug 993694, clicking on last record
      button reaches a page where the current page number is not the last one
    * main.php: - removed bug with hashform.hash
                - removed id for input field 'new_database', because it may be
                  too large for the one lined create db form
                - bug #980232 'Javascript error on index page'
    * db_details_common.php: removed bug with hashform.hash
    * index.php: - given names and ids for framesets, please see below 'queryframe.php'