@@ -5,8 +5,13 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-08-08 Marc Delisle  <lem9@users.sourceforge.net>
+    * libraries/relation.lib.php: bug 1005414, undefined offset when
+      no display field has been defined; bug 1004546, sort error in dropdown
+      list of foreign values; incorrect result was freed
+
 2004-08-08 Michal Čihař  <michal@cihar.com>
-	* calendar.php: Include correct stylesheet (bug #1005421).
+    * calendar.php: Include correct stylesheet (bug #1005421).
 
 2004-08-07 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/turkish update, thanks to Bora Alioglu
